--- a/lab/P12/index.html
+++ b/lab/P12/index.html
@@ -96,7 +96,7 @@
             return;
         }
 
-        arrow.style.transform = `rotate(${-delta}deg)`;
+        arrow.style.transform = `rotate(${delta}deg)`;
 
         statusEl.textContent = `läuft (${e.type}, absolute=${e.absolute})`;
         alphaEl.textContent = alpha.toFixed(1);
