fixing the flapping

--- a/lab/P12/index.html
+++ b/lab/P12/index.html
@@ -102,7 +102,7 @@
             }
         }
         window.addEventListener("deviceorientationabsolute", onOrientation, true);
-        window.addEventListener("deviceorientation", onOrientation, true);
+        // window.addEventListener("deviceorientation", onOrientation, true);
         statusEl.textContent = "Listener registriert – drehe das Gerät";
     }
 
